# Eduloop

./: .env.production  .gitignore  .package-lock.json  .replit  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  railway.json  start_backend.py  start_backend_server.py  tsconfig.json  vercel.json  vite.config.ts
attached_assets/: AboutPage.js  AcademicRecordPage.js  App.js  AuthContext.js  Chatbot.js  FinalOnboardingPage.js  ForgotPassword.js  FormWizard.js  HomePage.js  InsightsPage.js  IntakeForm.js  Login.js  Pasted--1-Student-first-Our-north-star-is-the-lived-experience-of-each-student-often-messy-evolving--1748636243234.txt  Pasted--Auth-Modal-activeTab-signin-activeTab-signup-div-clas-1749740271294_1749740271295.txt  Pasted--Core-Identity-Filiz-is-a-driven-intellectually-rich-and-deeply-expressive-individual-who-thrive-1748561622001.txt  Pasted--Error-Error-while-parsing-the-sandbox-attribute-allow-downloads-allow-downloads-without-use-1748616456546.txt  Pasted--File-nix-store-clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3-11-10-lib-pyt-1749319756132_1749319756133.txt  Pasted-Analysis-of-the-How-It-Works-Section-Strengths-Clarity-Simplicity-The-four-step-process-is-easy-1749736179524_1749736179524.txt  Pasted-HERO-SECTION-Headline-Crush-College-Admissions-With-Guidance-That-Gets-You-Subheadline-AI-powered-1749734233741_1749734233743.txt  Pasted-Headline-Subheadline-Crush-College-Admissions-With-Guidance-That-Gets-You-AI-powered-support-to-he-1749737686887_1749737686887.txt  SchoolList.css  SchoolList.js  SignUp.js  StudentDashboard.css  (+15 more)
(+113 files in other folders)
