[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "motor>=3.7.1",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
